--- a/style.css
+++ b/style.css
@@ -2,9 +2,14 @@ body{
     background-color: #4F5D75;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+button{
+    height: 80px;
+    width: 80px;
+    border-radius: 5%;
+}
 .calc-container{
     margin: auto;
-    border-style: solid;
+    border-style: double;
     border-color: #FFFFFF;
     border-radius: 20%;
     background-color: #2D3142;
@@ -12,14 +17,40 @@ body{
     height: 600px;
 }
 .output {
-    border-style: solid;
+    border-style: double;
+    border-radius: 10%;
+    border-color: #FFFFFF;
     background-color: #BFC0C0;
     margin: 50px;
     height: 10%;
 }
+.upper-buttons {
+    display: flex;
+    float: right;
+    flex-direction: column;
+}
+.numbers{
+    color: #FFFFFF;
+    display: flex;
+    /* flex-wrap: wrap; */
+    flex-wrap: wrap;
+}
+.main-operators{
+    display: flex;
+}
+.a, .b, .c, .d, .e, .f, .g, .h, .i, .j, .root, .power, .del, .clear,
+.division, .multiplication, .subtraction, .addition, .decimal, .equals
+{
+    font-size: 16pt;
+    padding: 10pt;
+    text-align: center;
+    color: black;
+    background-color: #BFC0C0;
+
+}
 .title {
     margin: auto;
     text-align: center;
-    color: #FFFFFF;
 }
+
 
