--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 body{
-    background-color: #4F5D75;
+    background-color: #2D3142;
+
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 button{
-    height: 80px;
+    height: 70px;
     width: 80px;
     border-radius: 5%;
 }
@@ -12,9 +13,11 @@ button{
     border-style: double;
     border-color: #FFFFFF;
     border-radius: 20%;
-    background-color: #2D3142;
+    background-color: #4F5D75;
     width: 480px;
-    height: 600px;
+    height: 550px;
+    padding-left: 5%;
+    padding-right: 5%;
 }
 .output {
     border-style: double;
@@ -23,6 +26,7 @@ button{
     background-color: #BFC0C0;
     margin: 50px;
     height: 10%;
+    width: 80%;
 }
 .upper-buttons {
     display: flex;
@@ -32,7 +36,6 @@ button{
 .numbers{
     color: #FFFFFF;
     display: flex;
-    /* flex-wrap: wrap; */
     flex-wrap: wrap;
 }
 .main-operators{
@@ -42,15 +45,20 @@ button{
 .division, .multiplication, .subtraction, .addition, .decimal, .equals
 {
     font-size: 16pt;
-    padding: 10pt;
     text-align: center;
     color: black;
     background-color: #BFC0C0;
-
+    margin-bottom: 10px;
+    margin-right: 15px;
+}
+.a:hover, .b:hover, .c:hover, .d:hover, .e:hover, .f:hover, .g:hover, .h:hover, .i:hover, .j:hover, .root:hover, .power:hover, .del:hover, .clear:hover,
+.division:hover, .multiplication:hover, .subtraction:hover, .addition:hover, .decimal:hover, .equals:hover
+{
+    border-style: solid;
+    border-color: black;
+    border-width: 2pt;
 }
 .title {
     margin: auto;
     text-align: center;
 }
-
-
