--- a/style.css
+++ b/style.css
@@ -1,80 +1,43 @@
-body{
-    background-color: #2D3142;
+*, *::before, *::after {
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-weight: normal;
+    box-sizing: border-box;
 }
-button{
-    height: 70px;
-    width: 80px;
-    border-radius: 5%;
-}
-.calc-container{
-    margin: auto;
-    border-style: solid;
-    border-color: #2D3142;
-    border-radius: 10%;
+
+body {
+    padding: 0;
+    margin: 0;
     background-color: #4F5D75;
-    width: 480px;
-    height: 550px;
-    padding-left: 5%;
-    padding-right: 5%;
 }
-.output {
-    border-style: solid;
-    border-radius: 10%;
-    border-color: #2D3142;
-    background-color: #BFC0C0;
-    color: #2D3142;
-    margin: 50px;
-    height: 13%;
+
+.calc-container{
+    display: grid;
+    justify-content: center;
+    align-content: center;
+    min-height: 100vh;
+    grid-template-columns: repeat(4, 100px);
+    grid-template-rows: minmax(120px, auto) repeat(5, 100px);
 }
-.output-display {
-    float: right;
-    font-size: 20pt;
-    margin-right: 10pt;
-}
-.upper-buttons {
-    display: flex;
-    float: right;
-    flex-direction: column;
-}
-.numbers{
-    color: #FFFFFF;
-    display: flex;
-    flex-wrap: wrap;
-}
-.main-operators{
-    display: flex;
-}
-#a, #b, #c, #d, #e, #f, #g, #h, #i, #j, #root, #power, #delete, #clear,
-#division, #multiplication, #subtraction, #addition, #decimal, #equals
-{
-    font-size: 16pt;
-    text-align: center;
-    color: black;
-    background-color: #BFC0C0;
-    margin-bottom: 10px;
-    margin-right: 15px;
-}
-#a:hover, #b:hover, #c:hover, #d:hover, #e:hover, #f:hover, #g:hover, #h:hover, #i:hover, #j:hover, #root:hover, #power:hover, #delete:hover, #clear:hover,
-#division:hover, #multiplication:hover, #subtraction:hover, #addition:hover, #decimal:hover, #equals:hover
-{
-    border-style: solid;
-    border-color: black;
-    border-width: 2pt;
-}
-#a:focus, #b:focus, #c:focus, #d:focus, #e:focus, #f:focus, #g:focus, #h:focus, #i:focus, #j:focus, #root:focus, #power:focus, #delete:focus, #clear:focus,
-#division:focus, #multiplication:focus, #subtraction:focus, #addition:focus, #decimal:focus, #equals:focus
-{
+
+.calc-container > button {
+    cursor: pointer;
     outline: none;
-    background-color: #2D3142;
-    color: #FFFFFF;
+    font-size: 20pt;
+    border: 1px solid;
+    background: #BFC0C0;
+    opacity: .75;
 }
-#clear, #delete {
-    background-color: #EF8354;
-    border-color: #EF8354;
+
+.calc-container > button:hover {
+    background-color: white;
+    opacity: .90;
 }
-#title {
-    margin: auto;
-    text-align: center;
-    color: #FFFFFF;
+
+.clear{
+    grid-column: span 2;
 }
+
+.equals {
+    grid-column: span 3;
+}
+
